# persona-ai-chatbot

./: .gitignore  LICENSE  README.md  main.py  package-lock.json  pyproject.toml
client/: index.html  vite.config.js
client/src/: App.css  App.jsx  ChatMessage.jsx  chatMessage.css  index.css
server/: index.js  package-lock.json  package.json
